# cpptraining

./: README.md  Untitled Diagram.drawio
session_01/TRAINING_SOURCES/: CMakeLists.txt
session_01/Task_2/: CMakeLists.txt  README>md  all.sh
session_01/Task_2/include/: pngpp_image.h
session_01/Task_2/src/: CMakeLists.txt
session_01/Task_2/src/cmake_multiple_sources/: main.cpp
session_01/Task_2/src/lib/: lodepng_image.cpp  pngpp_image.cpp
session_01/Task_2/src/test/: google_test.cc
session_01/Task_3/: all.sh
session_01/Task_3/include/: pngpp_image.h
session_01/Task_3/src/: CMakeLists.txt
session_01/Task_3/src/lib/: lodepng_image.cpp
session_01/Task_3/src/test/: task_3_gtest.cpp
session_02/my_session_02/: CMakeLists.txt  build.sh
session_02/my_session_02/inc/: main.h
session_02/my_session_02/inc/lib/: baseimg.h
session_02/my_session_02/include/: baseimg.h  def.h  lodepng_image.h
session_02/my_session_02/src/: CMakeLists.txt  main.cpp
session_02/my_session_02/src/cmake_multiple_sources/: main.cpp
session_02/my_session_02/src/lib/: baseimg.cpp  lodepng_image.cpp
session_02/session_02/: CMakeLists.txt  main.cpp
session_02/session_02/include/: baseimg.h  lodepng_image.h
session_02/session_02/src/: CMakeLists.txt
session_02/session_02/src/cmake_multiple_sources/: main.cpp
session_02/session_02/src/inheritance/: inheritance_demo.cpp
session_02/session_02/src/lib/: baseimg.cpp  foo.cpp  pngpp_image.cpp
session_02/session_02/src/macro_template/: macro_demo.cpp  template_demo.cpp
session_03/session_03/src/multithread/: thread_demo_with_problem.cpp
session_03/session_03/src/smart_pointer/: mem_leak_demo.cpp  smart_pointer_demo.cpp
